--- a/config/MSRGCN/h36m/demo.yaml
+++ b/config/MSRGCN/h36m/demo.yaml
@@ -1,19 +1,19 @@
 work_dir: work_dir/MSRGCN/h36m/test1 # 结果保存路径
 
+is_load: 0
+is_train: 1
 # feeder
 exp_name: h36m # h36m, cmu...
 feeder: feeder.MSRGCN.datas.h36m.H36MMotionDataset
 path_to_data: /share/zhangjinrong//human_motion_prediction/data/h3.6m/dataset
 train_manner: "all" # ["walking", "eating", "smoking", "discussion", "directions","greeting", "phoning", "posing", "purchases", "sitting", "sittingdown", "takingphoto", "waiting", "walkingdog", "walkingtogether"]
 test_manner: "all" # ["walking", "eating", "smoking", "discussion", "directions","greeting", "phoning", "posing", "purchases", "sitting", "sittingdown", "takingphoto", "waiting", "walkingdog", "walkingtogether"]
-subs: [[1, 6, 7, 8, 9], [5], [11]] # 对应data_path下的数据文件夹
+subs: [[1, 6, 7, 8, 9], [5], [11]] # 对应data_path下的数据文件夹[[1, 6, 7, 8, 9], [5], [11]]
 train_split: 0 # 对应subs中的选项
 teat_split: 1
 validation_split: 2
 sample_rate: 2 # 原版为2，隔一帧抽一帧，必须要隔一阵抽，否则训练不收敛
 # down_key: [('p22', 'p12', self.cfg.Index2212), ('p12', 'p7', self.cfg.Index127), ('p7', 'p4', self.cfg.Index74)]
-global_max: 0
-global_min: 0
 debug_step: 1
 # down_key
 Index2212: [[0], [1, 2, 3], [4], [5, 6, 7], [8, 9], [10, 11], [12], [13], [14, 15, 16], [17], [18], [19, 20, 21]]
@@ -34,14 +34,14 @@ LR22_plot: [0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0]
 
 
 # model
-model: models.MSRGCN.MSRGCN
+model: models.MSRGCN.msrgcn.MSRGCN
 
 # optim
 lr: 2e-4
 lr_decay: 0.98
 n_epoch: 5000
 leaky_c: 0.2 # 原版为0.2
-optimizer: optim.Adam
+optimizer: torch.optim.Adam
 train_loss: losses.loss.L2NormLoss_train
 test_loss: losses.loss.L2NormLoss_test
 
@@ -49,7 +49,7 @@ test_loss: losses.loss.L2NormLoss_test
 # ml_weight: 0.3 # 这个是给zjr添加到原有二范数损失的measure度量损失中调整比例的超参，先给个1看一下
 p_dropout: 0.1
 train_batch_size: 16
-test_batch_size: 128
+test_batch_size: 256
 input_n: 10
 output_n: 25
 seq_len: 35 # input_n + output_n
@@ -59,6 +59,7 @@ frame_ids: [1, 3, 7, 9, 13, 24]
 # test
 
 # computer
-device: '0'
-num_workers: 8
+visible_cuda: '1'
+device: 'cuda:0'
+num_workers: 1
 seed: 3450 # 设置torch随机种子
