--- a/config/MSRGCN/h36m/demo.yaml
+++ b/config/MSRGCN/h36m/demo.yaml
@@ -1,4 +1,8 @@
-work_dir: work_dir/MSRGCN/h36m/test1 # 结果保存路径
+wandb_key: fbd8bd3a0f05a3323688c35c2cd5c5bc92a0f490
+wandb_project: MSRGCN
+
+
+work_dir: work_dir/MSRGCN/h36m/test2 # 结果保存路径
 
 is_load: 0
 is_train: 1
@@ -8,7 +12,7 @@ feeder: feeder.MSRGCN.datas.h36m.H36MMotionDataset
 path_to_data: /share/zhangjinrong//human_motion_prediction/data/h3.6m/dataset
 train_manner: "all" # ["walking", "eating", "smoking", "discussion", "directions","greeting", "phoning", "posing", "purchases", "sitting", "sittingdown", "takingphoto", "waiting", "walkingdog", "walkingtogether"]
 test_manner: "all" # ["walking", "eating", "smoking", "discussion", "directions","greeting", "phoning", "posing", "purchases", "sitting", "sittingdown", "takingphoto", "waiting", "walkingdog", "walkingtogether"]
-subs: [[1, 6, 7, 8, 9], [5], [11]] # 对应data_path下的数据文件夹[[1, 6, 7, 8, 9], [5], [11]]
+subs: [[1], [5], [11]] # 对应data_path下的数据文件夹[[1, 6, 7, 8, 9], [5], [11]]
 train_split: 0 # 对应subs中的选项
 teat_split: 1
 validation_split: 2
@@ -59,7 +63,7 @@ frame_ids: [1, 3, 7, 9, 13, 24]
 # test
 
 # computer
-visible_cuda: '1'
+visible_cuda: '0'
 device: 'cuda:0'
 num_workers: 1
 seed: 3450 # 设置torch随机种子
