--- a/config/Cluster/h36m/demo.yaml
+++ b/config/Cluster/h36m/demo.yaml
@@ -1,5 +1,9 @@
+wandb_key: fbd8bd3a0f05a3323688c35c2cd5c5bc92a0f490
+wandb_project: GISLR
+
 work_dir: work_dir/MSRGCN/h36m/test1 # 结果保存路径
 
+runner: runner.classfication_runner
 is_load: 0
 is_train: 1
 # feeder
