--- a/config/GISLR/demo.yaml
+++ b/config/GISLR/demo.yaml
@@ -3,13 +3,15 @@ wandb_project: GISLR
 
 work_dir: work_dir/GISLR/test # 结果保存路径
 
-runner: runner.classfication_runner
+runner: runner.classfication_runner.Runner
 is_load: 0
 is_train: 1
 # feeder
 exp_name: gislr
 feeder: feeder.GISLR.motiondataset.GislrDataset
-path_to_data: /share/zhangjinrong//human_motion_prediction/data/h3.6m/dataset
+path_to_data: /share/kaggle/asl-signs/
+kflod_random_state: 42
+kflod_test_size: 0.2
 
 debug_step: 1
 
@@ -19,7 +21,7 @@ model: models.GISLR.test.Model
 # optim
 lr: 2e-4
 lr_decay: 0.98
-n_epoch: 60
+n_epoch: 150
 leaky_c: 0.2 # 原版为0.2
 optimizer: torch.optim.Adam
 train_loss: torch.nn.CrossEntropyLoss
@@ -30,13 +32,6 @@ test_loss: torch.nn.CrossEntropyLoss
 p_dropout: 0.1
 train_batch_size: 16
 test_batch_size: 256
-input_n: 10
-output_n: 25
-seq_len: 35 # input_n + output_n
-dct_n: 35 # 与sqe_len相同
-frame_ids: [1, 3, 7, 9, 13, 24]
-
-# test
 
 # computer
 visible_cuda: '0'
